--- a/index.html
+++ b/index.html
@@ -10,45 +10,44 @@
     <body>
         <header>
             <img src="https://i.pinimg.com/originals/54/d7/a2/54d7a2f5ab4004654d18686baf3f44c8.jpg" alt="Wikipedia">
-            <span>La enciclopedia libre</span>
+            <h4>La enciclopedia libre</h4>
         </header>
         <main>
-                <section class="main-languages">
-                    <div class="main-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/800px-Wikipedia-logo-v2.svg.png" alt="Wikipedia Logo">
-                        
-                        <div class="language english">
-                            <a href="#">English <span>6 029 000+ articles</span></a>
-                        </div>
-                        <div class="language spanish">
-                            <a href="#">Español <span>1 581 000+ artículos</span></a>
-                        </div>
-                        <div class = "language chinese">
-                            <a href="#">日本語 <span>1 193 000+ 記事</span></a>
-                        </div>
-                        <div class="language roussian">
-                            <a href="#">Русский <span>1 602 000+ статей</span></a>
-                        </div>
-                        <div class="language german">
-                            <a href="#">Deutsch <span>2 406 000+ Artikel</span></a>
-                        </div>
-                        <div class="language french">
-                            <a href="#">Français <span>2 187 000+ articles</span></a>
-                        </div>
-                        <div class="language italian">
-                            <a href="#">Italiano <span>1 588 000+ voci</span></a>
-                        </div>
-                        <div class="language japanese">
-                            <a href="#">中文 <span>1 101 000+ 條目</span></a>
-                        </div>
-                        <div class="language portuguese">
-                            <a href="#">Português <span>1 023 000+ artigos</span></a>
-                        </div>
-                        <div class="language polish">
-                            <a href="#">Polski <span>1 388 000+ haseł</span></a>
-                        </div>
+            <section class="main-languages">
+                <div class="main-logo">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/800px-Wikipedia-logo-v2.svg.png" alt="Wikipedia Logo" />
+                    <div class="language english">
+                        <a href="#">English <span>6 029 000+ articles</span></a>
                     </div>
-                </section>
+                    <div class="language spanish">
+                        <a href="#">Español <span>1 581 000+ artículos</span></a>
+                    </div>
+                    <div class = "language chinese">
+                        <a href="#">日本語 <span>1 193 000+ 記事</span></a>
+                    </div>
+                    <div class="language roussian">
+                        <a href="#">Русский <span>1 602 000+ статей</span></a>
+                    </div>
+                    <div class="language german">
+                        <a href="#">Deutsch <span>2 406 000+ Artikel</span></a>
+                    </div>
+                    <div class="language french">
+                        <a href="#">Français <span>2 187 000+ articles</span></a>
+                    </div>
+                    <div class="language italian">
+                        <a href="#">Italiano <span>1 588 000+ voci</span></a>
+                    </div>
+                    <div class="language japanese">
+                        <a href="#">中文 <span>1 101 000+ 條目</span></a>
+                    </div>
+                    <div class="language portuguese">
+                        <a href="#">Português <span>1 023 000+ artigos</span></a>
+                    </div>
+                    <div class="language polish">
+                        <a href="#">Polski <span>1 388 000+ haseł</span></a>
+                    </div>
+                </div>
+            </section>
             <section class="main-search">
                 <div class="main-search-container">
                     <input type="text">
